@@ -11,6 +11,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
@@ -50,10 +51,11 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
-import org.robolectric.annotation.Config;
 
 import org.chromium.base.Token;
+import org.chromium.base.supplier.ObservableSuppliers;
 import org.chromium.base.test.BaseRobolectricTestRunner;
+import org.chromium.base.test.RobolectricUtil;
 import org.chromium.base.test.util.Feature;
 import org.chromium.base.test.util.Features.DisableFeatures;
 import org.chromium.base.test.util.Features.EnableFeatures;
@@ -77,6 +79,7 @@ import org.chromium.chrome.browser.tabmodel.TabClosingSource;
 import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabCreator;
 import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter;
+import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter.MergeNotificationType;
 import org.chromium.chrome.browser.tabmodel.TabGroupUtils.TabGroupCreationCallback;
 import org.chromium.chrome.browser.tabmodel.TabList;
 import org.chromium.chrome.browser.tabmodel.TabModel;
@@ -307,8 +310,9 @@ public class TabContextMenuCoordinatorUnitTest {
                         () -> mTabModel,
                         mTabGroupModelFilter,
                         mBottomSheetCoordinator,
+                        mTabGroupCreationCallback,
                         mMultiInstanceManager,
-                        () -> mShareDelegate);
+                        ObservableSuppliers.createMonotonic(mShareDelegate));
         mTabContextMenuCoordinator =
                 TabContextMenuCoordinator.createContextMenuCoordinator(
                         () -> mTabModel,
@@ -316,7 +320,7 @@ public class TabContextMenuCoordinatorUnitTest {
                         mBottomSheetCoordinator,
                         mTabGroupCreationCallback,
                         mMultiInstanceManager,
-                        () -> mShareDelegate,
+                        ObservableSuppliers.createMonotonic(mShareDelegate),
                         mWindowAndroid,
                         mActivity,
                         mReorderFunction);
@@ -325,45 +329,56 @@ public class TabContextMenuCoordinatorUnitTest {
     @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
-    @SuppressWarnings("DirectInvocationOnMock")
+    public void testAddToNewTabGroup() {
+        mOnItemClickedCallback.onClick(
+                R.id.add_to_new_tab_group,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabGroupModelFilter, times(1)).createSingleTabGroup(mTab1);
+        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testAddToNewTabGroup_multipleTabs() {
+        mOnItemClickedCallback.onClick(
+                R.id.add_to_new_tab_group,
+                new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabGroupModelFilter, times(1))
+                .mergeListOfTabsToGroup(
+                        eq(List.of(mTab1, mTab2)),
+                        eq(mTab1),
+                        eq(MergeNotificationType.NOTIFY_IF_NOT_NEW_GROUP));
+        verify(mTabGroupCreationCallback, times(1)).onTabGroupCreated(TAB_GROUP_ID);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testListMenuItems_tabInGroup() {
         var modelList = new ModelList();
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
         var addToGroupItem = modelList.get(0);
-        var subMenu = addToGroupItem.model.get(SUBMENU_ITEMS);
-        assertNotNull("Submenu should be present", subMenu);
         assertEquals(
-                "Submenu should have 1 item, but was " + getDebugString(subMenu),
-                1,
-                subMenu.size());
-
-        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals(
-                "Expected 2 items to be displayed, but was " + getDebugString(modelList),
-                2,
-                modelList.size());
-        ListItem headerItem = modelList.get(0);
-        assertEquals(
-                "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
-        assertEquals(
-                "Expected submenu back header to have the same text as submenu parent item",
-                mActivity.getResources().getQuantityString(R.plurals.add_tab_to_group_menu_item, 1),
-                headerItem.model.get(TITLE));
-        assertEquals(
-                "Expected 2nd submenu item to have MENU_ITEM type",
+                "Expected 'Add to group' item to have no submenu when the anchor tab is in the only"
+                        + " existing group",
                 MENU_ITEM,
-                modelList.get(1).type);
+                addToGroupItem.type);
         assertEquals(
-                "Expected 2nd submenu item to be New Group",
-                R.string.create_new_group_row_title,
-                modelList.get(1).model.get(TITLE_ID));
-        headerItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals("Expected to navigate back to parent menu", 6, modelList.size());
+                "Expected title to be 'Add to new group'",
+                mActivity
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_new_group_menu_item, 1),
+                addToGroupItem.model.get(TITLE));
 
         // List item 2
         assertEquals(
@@ -403,36 +418,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
-    public void testListMenuItems_submenuCreateNewTabGroup() {
-        ModelList modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(
-                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
-
-        // Add to group submenu
-        ListItem addToGroupItem = modelList.get(0);
-        List<ListItem> subMenu = addToGroupItem.model.get(SUBMENU_ITEMS);
-        assertNotNull("Submenu should be present", subMenu);
-        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-
-        // Add to new group
-        ListItem addToNewGroupItem = modelList.get(1);
-        assertEquals(
-                "Expected 2nd submenu item to be New Group",
-                R.string.create_new_group_row_title,
-                addToNewGroupItem.model.get(TITLE_ID));
-        addToNewGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-
-        // Verify
-        verify(mTabGroupCreationCallback).onTabGroupCreated(any());
-    }
-
-    @Test
-    @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_tabInGroup_multipleTabs() {
         var modelList = new ModelList();
@@ -443,35 +429,17 @@ public class TabContextMenuCoordinatorUnitTest {
 
         // List item 1
         var addToGroupItem = modelList.get(0);
-        var subMenu = addToGroupItem.model.get(SUBMENU_ITEMS);
-        assertNotNull("Submenu should be present", subMenu);
         assertEquals(
-                "Submenu should have 1 item, but was " + getDebugString(subMenu),
-                1,
-                subMenu.size());
-
-        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals(
-                "Expected 2 items to be displayed, but was " + getDebugString(modelList),
-                2,
-                modelList.size());
-        ListItem headerItem = modelList.get(0);
-        assertEquals(
-                "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
-        assertEquals(
-                "Expected submenu back header to have the same text as submenu parent item",
-                mActivity.getResources().getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
-                headerItem.model.get(TITLE));
-        assertEquals(
-                "Expected 2nd submenu item to have MENU_ITEM type",
+                "Expected 'Add to group' item to have no submenu when the anchor tab is in the only"
+                        + " existing group",
                 MENU_ITEM,
-                modelList.get(1).type);
+                addToGroupItem.type);
         assertEquals(
-                "Expected 2nd submenu item to be New Group",
-                R.string.create_new_group_row_title,
-                modelList.get(1).model.get(TITLE_ID));
-        headerItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals("Expected to navigate back to parent menu", 5, modelList.size());
+                "Expected title to be 'Add to new group'",
+                mActivity
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_new_group_menu_item, 2),
+                addToGroupItem.model.get(TITLE));
 
         // List item 2
         assertEquals(
@@ -517,10 +485,11 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -550,10 +519,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_tabOutsideOfGroup_multipleTabs() {
         MultiWindowUtils.setInstanceCountForTesting(1);
@@ -567,7 +533,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -605,10 +572,11 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, "1 tab", 1, /* isIncognito= */ false);
     }
 
     @Test
@@ -628,10 +596,10 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1, /* isIncognito= */ true);
     }
 
     @Test
@@ -650,10 +618,11 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -687,10 +656,36 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_incognito_multipleWindows() {
+        setupWithIncognito(/* incognito= */ true);
+        initializeCoordinator();
+        MultiWindowUtils.setInstanceCountForTesting(3);
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
+
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
+
+        // List item 2
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tab_to_another_window,
+                Collections.singletonList(WINDOW_TITLE_2),
+                mActivity,
+                /* isIncognito= */ true);
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_tabOutsideOfGroup_multipleWindows_multipleTabs() {
         MultiWindowUtils.setInstanceCountForTesting(3);
@@ -707,7 +702,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -747,10 +743,11 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(1).type);
@@ -776,10 +773,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_belowApi31_multipleTabs() {
         MultiWindowUtils.setMultiInstanceApi31EnabledForTesting(false);
@@ -793,7 +787,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ false);
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(1).type);
@@ -823,13 +818,15 @@ public class TabContextMenuCoordinatorUnitTest {
                 modelList,
                 new AnchorInfo(NON_URL_TAB_ID, Collections.singletonList(NON_URL_TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
-        verifyAddToWindowSubmenu(modelList, List.of());
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList, 1, R.plurals.move_tab_to_another_window, List.of(), mActivity);
 
         // List item 3
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -861,10 +858,18 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ true);
+        assertEquals(
+                "Expected text appearance ID to be set to"
+                        + " R.style.TextAppearance_DensityAdaptive_TextLarge_Primary_Baseline_Light"
+                        + " in incognito for submenu parent",
+                org.chromium.chrome.R.style
+                        .TextAppearance_DensityAdaptive_TextLarge_Primary_Baseline_Light,
+                modelList.get(0).model.get(ListMenuItemProperties.TEXT_APPEARANCE_ID));
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -906,10 +911,7 @@ public class TabContextMenuCoordinatorUnitTest {
     }
 
     @Test
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_incognito_multipleTabs() {
         setupWithIncognito(/* incognito= */ true);
@@ -924,7 +926,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ true);
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -970,13 +973,15 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
-        verifyAddToWindowSubmenu(modelList, List.of());
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList, 1, R.plurals.move_tab_to_another_window, List.of(), mActivity);
 
         // List item 3
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -1005,7 +1010,6 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures({
         ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
         ChromeFeatureList.ANDROID_PINNED_TABS_TABLET_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
     })
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showPinTabOption_multipleTabs() {
@@ -1020,7 +1024,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -1062,13 +1067,15 @@ public class TabContextMenuCoordinatorUnitTest {
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 1, /* isIncognito= */ false);
 
         // List item 2
-        verifyAddToWindowSubmenu(modelList, List.of());
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList, 1, R.plurals.move_tab_to_another_window, List.of(), mActivity);
 
         // List item 3
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -1097,7 +1104,6 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures({
         ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
         ChromeFeatureList.ANDROID_PINNED_TABS_TABLET_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
     })
     @SuppressWarnings("DirectInvocationOnMock")
     public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showUnpinTabOption_multipleTabs() {
@@ -1115,7 +1121,8 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(
+                modelList, TAB_GROUP_TITLE, 2, /* isIncognito= */ false);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -1237,14 +1244,15 @@ public class TabContextMenuCoordinatorUnitTest {
                 new AnchorInfo(
                         TAB_OUTSIDE_OF_GROUP_ID,
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
-        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToNewWindow(modelList, 1, mView);
-        verify(mMultiInstanceManager, times(1))
-                .moveTabsToWindow(
-                        /* destWindowId= */ MultiInstanceManager.INVALID_WINDOW_ID,
-                        Collections.singletonList(mTabOutsideOfGroup),
-                        /* destTabIndex= */ TabList.INVALID_TAB_INDEX,
-                        /* destGroupTabId= */ TabList.INVALID_TAB_INDEX,
-                        NewWindowAppSource.MENU);
+        StripLayoutContextMenuCoordinatorTestUtils.clickMoveToNewWindow(
+                modelList,
+                1,
+                mOnItemClickedCallback,
+                new AnchorInfo(TAB_OUTSIDE_OF_GROUP_ID, List.of(TAB_OUTSIDE_OF_GROUP_ID)),
+                COLLABORATION_ID);
+        verify(mMultiInstanceManager)
+                .moveTabsToOtherWindow(
+                        Collections.singletonList(mTabOutsideOfGroup), NewWindowAppSource.MENU);
     }
 
     @Test
@@ -1269,12 +1277,12 @@ public class TabContextMenuCoordinatorUnitTest {
         StripLayoutContextMenuCoordinatorTestUtils.clickMoveToWindowRow(
                 modelList, 1, WINDOW_TITLE_2, mView);
 
-        verify(mMultiInstanceManager, times(1))
-                .moveTabsToWindow(
-                        INSTANCE_INFO_2,
+        verify(mMultiInstanceManager)
+                .moveTabsToWindowByIdChecked(
+                        INSTANCE_ID_2,
                         Collections.singletonList(mTabOutsideOfGroup),
-                        TabList.INVALID_TAB_INDEX,
-                        NewWindowAppSource.MENU);
+                        /* destTabIndex= */ TabList.INVALID_TAB_INDEX,
+                        /* destGroupTabId= */ TabList.INVALID_TAB_INDEX);
     }
 
     @Test
@@ -1433,14 +1441,54 @@ public class TabContextMenuCoordinatorUnitTest {
     @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
-    public void testMoveToWindow_EmptyWindowTitle() {
+    public void testMoveToWindow_NonEmptyCustomWindowTitle() {
         final InstanceInfo emptyTitleInstance =
                 new InstanceInfo(
                         INSTANCE_ID_2,
                         TASK_ID,
                         CURRENT,
                         EXAMPLE_URL.toString(),
-                        "",
+                        /* title= */ "Example",
+                        /* customTitle= */ "My window",
+                        NUM_TABS,
+                        NUM_INCOGNITO_TABS,
+                        /* isIncognitoSelected= */ false,
+                        LAST_ACCESSED_TIME,
+                        /* closureTime= */ 0);
+
+        MultiWindowUtils.setInstanceCountForTesting(2);
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(List.of(INSTANCE_INFO_1, emptyTitleInstance));
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+        ListItem moveToWindowItem = modelList.get(1);
+        assertNotNull(moveToWindowItem);
+
+        var subMenu = moveToWindowItem.model.get(SUBMENU_ITEMS);
+        assertEquals("Submenu should have 2 items", 2, subMenu.size());
+
+        ListItem otherWindowItem = subMenu.get(1);
+        assertEquals(
+                "The title for the other window is incorrect.",
+                "My window",
+                otherWindowItem.model.get(TITLE));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testMoveToWindow_EmptyCustomWindowTitle() {
+        final InstanceInfo emptyTitleInstance =
+                new InstanceInfo(
+                        INSTANCE_ID_2,
+                        TASK_ID,
+                        CURRENT,
+                        EXAMPLE_URL.toString(),
+                        /* title= */ "Example",
                         /* customTitle= */ null,
                         NUM_TABS,
                         NUM_INCOGNITO_TABS,
@@ -1465,8 +1513,8 @@ public class TabContextMenuCoordinatorUnitTest {
 
         ListItem otherWindowItem = subMenu.get(1);
         assertEquals(
-                "The title for the other window should be the incognito window title string.",
-                mActivity.getString(R.string.instance_switcher_entry_empty_window),
+                "The title for the other window is incorrect.",
+                "Example",
                 otherWindowItem.model.get(TITLE));
     }
 
@@ -1491,7 +1539,7 @@ public class TabContextMenuCoordinatorUnitTest {
                         Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
 
         // With only one window and all tabs selected, the "move to window" option should not show.
-        assertEquals("Number of items in the list menu is incorrect.", 5, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect.", 6, modelList.size());
         assertEquals(
                 "Second item should be a divider instead of 'move to window'.",
                 DIVIDER,
@@ -1527,6 +1575,52 @@ public class TabContextMenuCoordinatorUnitTest {
                 modelList.get(1).type);
     }
 
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_noGroups_submenusEnabled() {
+        // No groups
+        when(mTabGroupModelFilter.getAllTabGroupIds()).thenReturn(Collections.emptySet());
+        when(mTabGroupSyncService.getAllGroupIds()).thenReturn(new String[0]);
+
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        // Item 0 should be "Add tab to new group" and NOT have a submenu.
+        ListItem addToGroupItem = modelList.get(0);
+
+        assertEquals("Should be a regular menu item", MENU_ITEM, addToGroupItem.type);
+        assertEquals(
+                "Title should be 'Add tab to new group'",
+                mActivity
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_new_group_menu_item, 1),
+                addToGroupItem.model.get(TITLE));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_moreThanOneWindow_submenusEnabled() {
+        MultiWindowUtils.setInstanceCountForTesting(2);
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList,
+                new AnchorInfo(
+                        TAB_OUTSIDE_OF_GROUP_ID,
+                        Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID)));
+
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tab_to_another_window,
+                List.of(WINDOW_TITLE_2),
+                mActivity);
+    }
+
     private @Nullable ListItem findItemByMenuId(ModelList modelList, int menuId) {
         for (int i = 0; i < modelList.size(); i++) {
             ListItem item = modelList.get(i);
@@ -1540,7 +1634,10 @@ public class TabContextMenuCoordinatorUnitTest {
     }
 
     private void verifyAddToGroupSubmenuForTabOutsideOfGroup(
-            ModelList modelList, String expectedTabGroupName, int expectedTabCount) {
+            ModelList modelList,
+            String expectedTabGroupName,
+            int expectedTabCount,
+            boolean isIncognito) {
         int modelListSizeBeforeNav = modelList.size();
         var addToGroupItem = modelList.get(0);
         assertTrue("Expected 'Add to group' item to be enabled", addToGroupItem.model.get(ENABLED));
@@ -1587,74 +1684,9 @@ public class TabContextMenuCoordinatorUnitTest {
         assertEquals(
                 "Expected circle to have correct color",
                 TabGroupColorPickerUtils.getTabGroupColorPickerItemColor(
-                        mActivity, TAB_GROUP_INDICATOR_COLOR_ID, /* isIncognito= */ false),
+                        mActivity, TAB_GROUP_INDICATOR_COLOR_ID, isIncognito),
                 drawable.getColor().getDefaultColor());
         assertTrue("Expected tab group row to be enabled", tabGroupRowModel.get(ENABLED));
-        headerItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertEquals(
-                "Expected to navigate back to parent menu",
-                modelListSizeBeforeNav,
-                modelList.size());
-    }
-
-    private void verifyAddToWindowSubmenu(ModelList modelList, List<String> otherWindowTitles) {
-        int modelListSizeBeforeNav = modelList.size();
-        var moveToOtherWindowItem = modelList.get(1);
-        var subMenu = moveToOtherWindowItem.model.get(SUBMENU_ITEMS);
-        int expectedNumberOfItems =
-                1 + (otherWindowTitles.isEmpty() ? 0 : 1 + otherWindowTitles.size());
-        assertEquals(
-                "Submenu should have "
-                        + expectedNumberOfItems
-                        + " item(s), but was "
-                        + getDebugString(subMenu),
-                expectedNumberOfItems,
-                subMenu.size());
-        moveToOtherWindowItem.model.get(CLICK_LISTENER).onClick(mView);
-        assertNotNull("Submenu should be present", subMenu);
-        assertEquals(
-                "Expected to display "
-                        + expectedNumberOfItems
-                        + 1 // Back header added
-                        + " item(s) after entering submenu, but was "
-                        + getDebugString(modelList),
-                expectedNumberOfItems + 1,
-                modelList.size());
-        ListItem headerItem = modelList.get(0);
-        assertEquals(
-                "Expected first item to have SUBMENU_HEADER type", SUBMENU_HEADER, headerItem.type);
-        assertEquals(
-                "Expected submenu back header to have the same text as submenu parent item",
-                mActivity.getResources().getQuantityString(R.plurals.move_tab_to_another_window, 2),
-                headerItem.model.get(TITLE));
-        assertTrue("Expected submenu header to be enabled", headerItem.model.get(ENABLED));
-        assertEquals("Expected 2nd item to have MENU_ITEM type", MENU_ITEM, modelList.get(1).type);
-        assertEquals(
-                "Expected 2nd item to be 'New window' row",
-                R.string.menu_new_window,
-                modelList.get(1).model.get(TITLE_ID));
-        if (!otherWindowTitles.isEmpty()) {
-            assertEquals(
-                    "Expected 3rd item to be divider, but was " + getDebugString(modelList),
-                    DIVIDER,
-                    modelList.get(2).type);
-            for (int i = 0; i < otherWindowTitles.size(); i++) {
-                assertEquals(
-                        "Expected window row at position " + (i + 3) + " to have MENU_ITEM type",
-                        MENU_ITEM,
-                        modelList.get(1).type);
-                assertEquals(
-                        "Expected window row at position "
-                                + (i + 2)
-                                + " to have text "
-                                + otherWindowTitles.get(i),
-                        otherWindowTitles.get(i),
-                        modelList.get(i + 3).model.get(TITLE));
-                assertTrue(
-                        "Expected window row at position " + (i + 3) + " to be enabled",
-                        modelList.get(i + 3).model.get(ENABLED));
-            }
-        }
         headerItem.model.get(CLICK_LISTENER).onClick(mView);
         assertEquals(
                 "Expected to navigate back to parent menu",
@@ -1686,8 +1718,6 @@ public class TabContextMenuCoordinatorUnitTest {
         return modelListContents.toString();
     }
 
-    // TODO(crbug.com/450954710): This test fails on SDK 36.
-    @Config(sdk = 29)
     @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
@@ -1706,6 +1736,7 @@ public class TabContextMenuCoordinatorUnitTest {
         var addToGroupItem = modelList.get(0);
         addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
 
+        RobolectricUtil.runAllBackgroundAndUi();
         // Verify that the top item of the submenu is selected.
         ListView listView =
                 mTabContextMenuCoordinator
@@ -1719,6 +1750,7 @@ public class TabContextMenuCoordinatorUnitTest {
         // Click back to parent menu.
         var headerItem = modelList.get(0);
         headerItem.model.get(CLICK_LISTENER).onClick(mView);
+        RobolectricUtil.runAllBackgroundAndUi();
 
         // Verify that the top item of the parent menu is selected.
         assertEquals(
@@ -1740,8 +1772,7 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        // Items are: add to group, remove from group, divider, share, duplicate, close.
-        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 8, modelList.size());
         ListItem duplicateItem = findItemByMenuId(modelList, R.id.duplicate_tab_menu_id);
         assertNotNull(duplicateItem);
         assertEquals(
@@ -1758,8 +1789,7 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        // Items are: add to group, remove from group, divider, share, close.
-        assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
         assertNull(findItemByMenuId(modelList, R.id.duplicate_tab_menu_id));
     }
 
@@ -1777,7 +1807,6 @@ public class TabContextMenuCoordinatorUnitTest {
     @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures({
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING,
         ChromeFeatureList.ANDROID_CONTEXT_MENU_DUPLICATE_TABS,
         ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP
     })
@@ -1786,7 +1815,6 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
 
-        // Items are: add to group, remove from group, divider, duplicate, close.
         assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
         ListItem duplicateItem = findItemByMenuId(modelList, R.id.duplicate_tab_menu_id);
         assertNotNull(duplicateItem);
@@ -1797,17 +1825,13 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING,
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     @DisableFeatures({ChromeFeatureList.ANDROID_CONTEXT_MENU_DUPLICATE_TABS})
     public void testListMenuItems_multipleTabs_duplicateTabs_featureDisabled() {
         var modelList = new ModelList();
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
 
-        // Items are: add to group, remove from group, divider, duplicate, close.
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
         assertNull(findItemByMenuId(modelList, R.id.duplicate_tab_menu_id));
     }
@@ -1837,9 +1861,8 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 8, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 9, modelList.size());
 
-        // Items are: add to group, move to window, move left, move right, divider, share, close.
         ListItem moveStartItem = modelList.get(2);
         String moveStartTitle =
                 String.valueOf(moveStartItem.model.get(ListMenuItemProperties.TITLE));
@@ -1869,9 +1892,8 @@ public class TabContextMenuCoordinatorUnitTest {
         mTabContextMenuCoordinator.configureMenuItemsForTesting(
                 modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
 
-        assertEquals("Number of items in the list menu is incorrect", 8, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 9, modelList.size());
 
-        // Items are: add to group, move to window, move start, move end, divider, share, close.
         ListItem moveStartItem = modelList.get(2);
         String moveStartTitle =
                 String.valueOf(moveStartItem.model.get(ListMenuItemProperties.TITLE));
@@ -2119,10 +2141,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     public void testListMenuItems_moveTabsItems_accessibilityOn() {
         mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
 
@@ -2134,7 +2153,6 @@ public class TabContextMenuCoordinatorUnitTest {
                 modelList, new AnchorInfo(TAB_ID, List.of(TAB_ID, TAB_ID_2)));
         assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
 
-        // Items are: add to group, move to window, move left, move right, divider, pin, close.
         ListItem moveStartItem = modelList.get(2);
         String moveStartTitle =
                 String.valueOf(moveStartItem.model.get(ListMenuItemProperties.TITLE));
@@ -2153,10 +2171,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     public void testMoveTabsLeft() {
         mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
         when(mTabModel.indexOf(mTab1)).thenReturn(1);
@@ -2175,10 +2190,7 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures({
-        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
-        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
-    })
+    @EnableFeatures({ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP})
     public void testMoveTabsRight() {
         mTabContextMenuCoordinator.setIsGesturesEnabledForTesting(true);
         when(mTabModel.indexOf(mTab1)).thenReturn(1);
@@ -2261,5 +2273,60 @@ public class TabContextMenuCoordinatorUnitTest {
         verify(mTabModel, times(1)).isMuted(mChromeNativeSchemeTabWithWebContents);
         verify(mTabModel, never()).isMuted(mChromeNativeSchemeTabWithoutWebContents);
         verify(mTabModel, never()).isMuted(mChromeSchemeTabWithoutWebContents);
+    }
+
+    @Test
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_closeAllTabs() {
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
+        ListItem closeAllTabsItem = findItemByMenuId(modelList, R.id.close_all_tabs_menu_id);
+        assertNotNull(closeAllTabsItem);
+        assertEquals(R.string.menu_close_all_tabs, closeAllTabsItem.model.get(TITLE_ID));
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_all_tabs_menu_id,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeAllTabs()
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
+    }
+
+    @Test
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_closeAllIncognitoTabs() {
+        setupWithIncognito(/* incognito= */ true);
+        initializeCoordinator();
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)));
+
+        assertEquals("Number of items in the list menu is incorrect", 7, modelList.size());
+        ListItem closeAllTabsItem =
+                findItemByMenuId(modelList, R.id.close_all_incognito_tabs_menu_id);
+        assertNotNull(closeAllTabsItem);
+        assertEquals(R.string.menu_close_all_incognito_tabs, closeAllTabsItem.model.get(TITLE_ID));
+
+        mOnItemClickedCallback.onClick(
+                R.id.close_all_incognito_tabs_menu_id,
+                new AnchorInfo(TAB_ID, Collections.singletonList(TAB_ID)),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+        verify(mTabRemover)
+                .closeTabs(
+                        TabClosureParams.closeAllTabs()
+                                .hideTabGroups(true)
+                                .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
+                                .build(),
+                        /* allowDialog= */ true);
     }
 }
