@@ -66,6 +66,7 @@ import org.chromium.ui.mojom.WindowShowState;
 
 import java.lang.ref.WeakReference;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 /** Supports Robolectric and native unit tests relevant to {@link ChromeAndroidTask}. */
@@ -261,7 +262,12 @@ public final class ChromeAndroidTaskUnitTestSupport {
         var chromeAndroidTask =
                 isPendingTask
                         ? chromeAndroidTaskTracker.createPendingTask(
-                                createPendingTaskInfo().mCreateParams, null)
+                                createMockAndroidBrowserWindowCreateParams(
+                                        BrowserWindowType.NORMAL,
+                                        new Rect(),
+                                        WindowShowState.DEFAULT,
+                                        profile),
+                                null)
                         : chromeAndroidTaskTracker.obtainTask(
                                 BrowserWindowType.NORMAL,
                                 activityScopedObjects,
@@ -345,25 +351,27 @@ public final class ChromeAndroidTaskUnitTestSupport {
         var mockTabModel = mock(TabModel.class);
         when(mockTabModel.getProfile()).thenReturn(profile);
 
+        // Assume the regular tab model is always the current tab model.
         var mockTabModelSelector = mock(TabModelSelector.class);
         SettableMonotonicObservableSupplier<TabModel> tabModelSupplier =
                 ObservableSuppliers.createMonotonic();
         tabModelSupplier.set(mockTabModel);
+        when(mockTabModelSelector.getModel(false)).thenReturn(mockTabModel);
         when(mockTabModelSelector.getCurrentTabModelSupplier()).thenReturn(tabModelSupplier);
         when(mockTabModelSelector.getCurrentModel()).thenReturn(mockTabModel);
+
+        // Even when we have a dedicated window per-profile both TabModels will still exist;
+        // however, one will always be empty.
+        var mockIncognitoTabModel = mock(IncognitoTabModel.class);
+        when(mockTabModelSelector.getModel(true)).thenReturn(mockIncognitoTabModel);
         when(mockTabModelSelector.getModels())
-                .thenReturn(java.util.Collections.singletonList(mockTabModel));
+                .thenReturn(List.of(mockTabModel, mockIncognitoTabModel));
+
+        // Initially there is no incognito profile until an incognito tab is created.
+        when(mockIncognitoTabModel.getProfile()).thenReturn(null);
 
         var mockDesktopWindowStateManager = mock(DesktopWindowStateManager.class);
         var mockMultiInstanceManager = createMockMultiInstanceManager();
-
-        if (profileType == SupportedProfileType.MIXED) {
-            var mockIncognitoTabModel = mock(IncognitoTabModel.class);
-            when(mockTabModelSelector.getModel(false)).thenReturn(mockTabModel);
-            when(mockTabModelSelector.getModel(true)).thenReturn(mockIncognitoTabModel);
-            // Initially, no incognito profile.
-            when(mockIncognitoTabModel.getProfile()).thenReturn(null);
-        }
 
         return new ChromeAndroidTask.ActivityScopedObjects(
                 activityWindowAndroid,
@@ -483,7 +491,7 @@ public final class ChromeAndroidTaskUnitTestSupport {
     }
 
     /**
-     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int)
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams() {
         return createMockAndroidBrowserWindowCreateParams(
@@ -491,7 +499,7 @@ public final class ChromeAndroidTaskUnitTestSupport {
     }
 
     /**
-     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int)
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
             @BrowserWindowType int windowType) {
@@ -500,22 +508,34 @@ public final class ChromeAndroidTaskUnitTestSupport {
     }
 
     /**
-     * Creates an {@link AndroidBrowserWindowCreateParams} mock.
-     *
-     * @param windowType The mock {@link BrowserWindowType} to set in the create params.
-     * @param launchBounds The launch bounds to set in the create params.
-     * @param showState The mock {@link WindowShowState} to set in the create params.
-     * @return The {@link AndroidBrowserWindowCreateParams} mock.
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
             @BrowserWindowType int windowType,
             Rect launchBounds,
             @WindowShowState.EnumType int showState) {
+        return createMockAndroidBrowserWindowCreateParams(
+                windowType, launchBounds, showState, mock(Profile.class));
+    }
+
+    /**
+     * Creates an {@link AndroidBrowserWindowCreateParams} mock.
+     *
+     * @param windowType The mock {@link BrowserWindowType} to set in the create params.
+     * @param launchBounds The launch bounds to set in the create params.
+     * @param showState The mock {@link WindowShowState} to set in the create params.
+     * @param profile The {@link Profile} to set in the create params.
+     * @return The {@link AndroidBrowserWindowCreateParams} mock.
+     */
+    static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
+            @BrowserWindowType int windowType,
+            Rect launchBounds,
+            @WindowShowState.EnumType int showState,
+            Profile profile) {
         var mockParams = mock(AndroidBrowserWindowCreateParams.class);
         when(mockParams.getWindowType()).thenReturn(windowType);
-        Profile mockProfile = mock(Profile.class);
-        when(mockParams.getProfile()).thenReturn(mockProfile);
-        when(mockParams.getInitialBounds()).thenReturn(launchBounds);
+        when(mockParams.getProfile()).thenReturn(profile);
+        when(mockParams.getInitialBoundsInDp()).thenReturn(launchBounds);
         when(mockParams.getInitialShowState()).thenReturn(showState);
         mockPopupIntentCreator();
 
@@ -616,7 +636,8 @@ public final class ChromeAndroidTaskUnitTestSupport {
         var intent = new Intent();
         intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
 
-        when(mockMultiInstanceManager.createNewWindowIntent(anyBoolean())).thenReturn(intent);
+        when(mockMultiInstanceManager.createNewWindowIntent(anyBoolean(), anyInt()))
+                .thenReturn(intent);
         return mockMultiInstanceManager;
     }
 }
